Base theme: Removed -webkit-overflow-scrolling rule from Chosen CSS. Fixes #224 - iPhone scroll to top.

--- a/themes/jquery/css/base.css
+++ b/themes/jquery/css/base.css
@@ -4301,7 +4301,6 @@ pre .chunk {
 	position: relative;
 	overflow-x: hidden;
 	overflow-y: auto;
-	-webkit-overflow-scrolling: touch;
 }
 
 .chzn-container-multi .chzn-results {
